Add developer credit to footer

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 
     <footer>
         <p>&copy; 2025 Digital BLD - Bangladesh Bar Council Initiative.</p>
+        <p style="margin-top: 5px; font-size: 0.8em; color: #888;">Design and Developed by Sheikh Hamza</p>
     </footer>
 
     <script src="script.js"></script>
