--- a/index.html
+++ b/index.html
@@ -303,9 +303,69 @@
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Digital BLD - Bangladesh Bar Council Initiative.</p>
-        <p style="margin-top: 5px; font-size: 0.8em; color: #888;">Design and Developed by Sheikh Hamza</p>
+    <footer class="main-footer">
+        <div class="footer-content">
+            <!-- Col 1: Brand -->
+            <div class="footer-col brand-col">
+                <div class="footer-logo">
+                    <img src="logo.png" alt="Digital BLD Logo">
+                </div>
+                <h3>Digital BLD</h3>
+
+                <div class="verified-section">
+                    <p>Verified by</p>
+                    <div class="ssl-badge">SSLCOMMERZ</div>
+                </div>
+            </div>
+
+            <!-- Col 2: Explore -->
+            <div class="footer-col">
+                <h4>Explore</h4>
+                <ul>
+                    <li><a href="#">Terms & Conditions of Service (TCS)</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">We Listen</a></li>
+                    <li><a href="#">Join Digital BLD</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </div>
+
+            <!-- Col 3: Quick Links -->
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Our Subscriptions</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">User Manual</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+
+            <!-- Col 4: Contact -->
+            <div class="footer-col contact-col">
+                <h4>Contact Us</h4>
+                <p><strong>Bangladesh Bar Council</strong><br>
+                    Bar Council Bhaban<br>
+                    3, Shahid Captain Mansur Ali Sarani<br>
+                    Shahbag, Dhaka.</p>
+
+                <p class="mt-2"><strong>Email:</strong> info@barcouncil.gov.bd<br>
+                    bangladeshbarcouncil@gmail.com<br>
+                    info@bldlegalized.com</p>
+
+                <p><strong>Phone:</strong> 02223389807, 02223389809</p>
+
+                <p class="mt-2"><strong>For Technical & Payment Issues Contact</strong><br>
+                    <strong>Email:</strong> support@bldlegalized.com<br>
+                    <strong>Phone:</strong> 01999585858
+                </p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 Copyright <strong>Bangladesh Bar Council</strong> All Rights Reserved</p>
+            <p class="developer-credit">Designed & Developed by <span style="color: #ffcc00;">Sheikh Hamza</span></p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
