Update SSL logo to image

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
                 <div class="verified-section">
                     <p>Verified by</p>
-                    <div class="ssl-badge">SSLCOMMERZ</div>
+                    <img src="ssl-logo.png" alt="SSLCOMMERZ" class="ssl-logo-img">
                 </div>
             </div>
 
