Update header text and remove duplicates

--- a/index.html
+++ b/index.html
@@ -46,21 +46,12 @@
         <!-- VIEW 1: SEARCH FORM -->
         <div id="search-view" class="view-section">
             <div class="hero-section">
-                <h2>A platform initiated by the Bangladesh Bar Council</h2>
-                <p>For judges, lawyers, and legal researchers, <strong>Bangladesh Bar Council</strong> as the licensing
-                    and
-                    regulatory authority for all advocates in Bangladesh, its primary functions include maintaining the
-                    role
-                    of advocates, conducting enrollment exams, setting professional standards, and resolving cases of
-                    professional misconduct.</p>
-                <p>Digital BLD reflects a bold institutional reform led by the Bangladesh Bar Council, the nation's
-                    licensing and regulatory body for advocates, reinforcing its commitment to justice, modernization,
-                    and
-                    the rule of law.</p>
+                <h2>Search Judgments</h2>
+                <p>High Court Division Judgment Search</p>
             </div>
 
             <div class="search-card">
-                <div class="card-header">
+                <div class="card-header" style="display: none;">
                     <h3>Search Judgments</h3>
                     <p>High Court Division Judgment Search</p>
                 </div>
