--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Digital BLD" class="sc-logo">
-            <div class="brand-text">
-                <h1>Digital BLD</h1>
-            </div>
+            <a href="index.html"
+                style="text-decoration: none; display: flex; align-items: center; gap: 15px; color: inherit;">
+                <img src="logo.png" alt="Digital BLD" class="sc-logo">
+                <div class="brand-text">
+                    <h1>Digital BLD</h1>
+                </div>
+            </a>
         </div>
         <nav class="header-menu">
             <a href="#">OUR SUBSCRIPTIONS</a>
