Remove loading indicator from search button and results view

--- a/index.html
+++ b/index.html
@@ -274,10 +274,7 @@
             <div id="results-grid" class="results-grid">
                 <!-- Cards will be injected here via JS -->
             </div>
-            <div id="loading-indicator" class="hidden">
-                <div class="spinner"></div>
-                <p>Fetching cases...</p>
-            </div>
+            <!-- Loading indicator removed -->
         </div>
 
         <!-- VIEW 3: PDF PREVIEW -->
